tests/NormalTests/paczka2/big_fuzzy/26125393.err
Error in line 4: S671 S671 3,4
Error in line 2: T4Lh9Z9VoD A928 58,4
Error in line 7: T4Lh9Z9VoD S671 93,9
Error in line 5: K4slljV A85 91,8
Error in line 17: CzynKYI A85 60,0
Error in line 36: FKtE6yJU A85 5,1
Error in line 50: T4Lh9Z9VoD A85 81,79
Error in line 43: T4Lh9Z9VoD A928 229,1
Error in line 62: Db27b A954 34,4
Error in line 67: S671 A954 86,2
Error in line 73: S671 A85 63,6
Error in line 77: S671 A954 48,0
Error in line 78: S671 A928 25,4
Error in line 81: S671 A85 17,9
Error in line 85: Db27b A928 270,31
Error in line 86: K4slljV A928 71,5
Error in line 53: T4Lh9Z9VoD A85 319,4
Error in line 76: Db27b A928 77,4
Error in line 98: Db27b A954 26,9
Error in line 109: K4slljV A928 52,3
Error in line 132: CzynKYI S671 6,1
Error in line 138: Db27b A85 63,9
Error in line 141: FKtE6yJU A954 51,3
Error in line 157: FKtE6yJU A85 13,4
Error in line 162: FKtE6yJU A928 26,4
Error in line 169: T4Lh9Z9VoD A928 18,5
Error in line 173: OesfjOjb A954 40,6
Error in line 172: K4slljV S671 60,6
Error in line 183: T4Lh9Z9VoD A928 37,2
Error in line 176: S671 S671 9,5
Error in line 193: K4slljV A928 91,0
Error in line 196: OesfjOjb A928 46,0
Error in line 203: OesfjOjb A954 43,1
Error in line 209: Db27b A928 23,27
Error in line 217: S671 A85 7,1
Error in line 221: Db27b A85 79,5
Error in line 236: T4Lh9Z9VoD A928 6,8
Error in line 245: Db27b A85 86,55
Error in line 243: OesfjOjb A85 93,1
Error in line 247: OesfjOjb A954 51,8
